--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=1"  type="image/x-icon"/>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=1" type="image/png/ico" /> -->
+
+    <link rel="icon" href="%PUBLIC_URL%/BR_02_32x32.png"  type="image/png"/>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/BR_02_32x32.png" type="image/png/ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -15,7 +20,7 @@
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin=""
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/BR_02.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/BR_02_16x16.png"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
