- updated background map

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=1" type="image/png/ico" /> -->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-K5FSTJHF4R"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K5FSTJHF4R"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-K5FSTJHF4R');
-    </script> -->
+    </script>
 
     <link rel="icon" href="%PUBLIC_URL%/BR_02_32x32.png"  type="image/png"/>
     <link rel="shortcut icon" href="%PUBLIC_URL%/BR_02_32x32.png" type="image/png/ico" />
