- added sitemap.xml

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
     />
-
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/react-leaflet-markercluster/dist/index.js"></script>
+    <link
+    rel="stylesheet"
+    type="text/css"
+    href="https://unpkg.com/react-leaflet-markercluster/dist/styles.min.css"
+  />
     <title>IVAucher - Mapa da Rede de Aderentes</title>
   </head>
   <body>
