- Added schema.org annotations

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,25 @@
     />
 
     <title>IVAucher - Mapa da Rede de Aderentes</title>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "CreativeWork",
+        "name": "Mapa do AUTOvoucher",
+        "image": [
+          "https://pbs.twimg.com/media/FEO2AHHXMAUykZA?format=jpg&name=4096x4096"
+         ],
+        "description": "Mapa interactivo com os postos de abastecimento de combustiveis aderentes ao programa IVAucher/AUTOvoucher.",
+          "author": {
+            "@type": "Company",
+            "name": "ByteRoad"
+          },
+          "datePublished": "2021-11-15",
+        }
+      }
+      </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
